# buttplug-rs-ffi

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: java.workflow.yml
csharp/: .gitignore  ButtplugCSharpFFI.sln  CHANGELOG.md  README.md  azure-pipelines.yaml
csharp/ButtplugCSharpFFI/: Buttplug.csproj  ButtplugCSharpFFI.csproj  ButtplugClient.cs  ButtplugClientDevice.cs  ButtplugConnectorException.cs  ButtplugDeviceException.cs  ButtplugEmbeddedConnectorOptions.cs  ButtplugException.cs  ButtplugExceptionEventArgs.cs  ButtplugFFI.cs  ButtplugFFILog.cs  ButtplugFFIMessageSorter.cs  ButtplugHandshakeException.cs  ButtplugMessageAttributes.cs  ButtplugMessageException.cs  ButtplugPingException.cs  ButtplugRsFfi.cs  ButtplugServerOptions.cs  ButtplugUnknownException.cs  ButtplugUtils.cs  ButtplugWebsocketConnectorOptions.cs  DeviceAddedEventArgs.cs  DeviceRemovedEventArgs.cs  Endpoint.cs  LICENSE
csharp/ButtplugCSharpFFI/ButtplugFFI/: BatteryLevelCmd.cs  BatteryLevelReading.cs  ButtplugErrorType.cs  ClientConnected.cs  ClientMessage.cs  ClientMessageType.cs  ConnectLocal.cs  ConnectWebsocket.cs  CreateClient.cs  CreateClientType.cs  CreateDevice.cs  CreateLocal.cs  CreateWebsocket.cs  DeviceAdded.cs  DeviceCommunicationManagerTypes.cs  DeviceEvent.cs  DeviceEventType.cs  DeviceList.cs  DeviceMessage.cs  DeviceMessageType.cs  DeviceRemoved.cs  Disconnect.cs  Error.cs  GetDevice.cs  LinearCmd.cs  LinearComponent.cs  MessageAttributeType.cs  MessageAttributes.cs  Ok.cs  RSSILevelCmd.cs  RSSILevelReading.cs  RawReadCmd.cs  RawSubscribeCmd.cs  RawUnsubscribeCmd.cs  RawWriteCmd.cs  RequestDeviceList.cs  RotateCmd.cs  RotateComponent.cs  ScanningFinished.cs  ServerMessage.cs  (+6 more)
csharp/ButtplugCSharpFFITest/: ButtplugCSharpFFITest.csproj  Program.cs
csharp/FlatBuffers/: FlatBuffers.csproj
ffi/: CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  build.rs  rustfmt.toml  tree.txt
ffi-flatbufs/: build.rs
ffi-flatbufs/src/: export.rs  util.rs
ffi-protobufs/: Cargo.toml  build.rs
ffi-protobufs/src/: client.rs  device.rs  lib.rs  pbufs.rs  util.rs
ffi/nuget/: ButtplugRustFFI.nuspec  [Content_Types].xml  buttplugffi.nuspec
ffi/nuget/_rels/: .rels
ffi/nuget/runtimes/win-x64/native/: README.md
ffi/src/: client.rs  device.rs  export.rs  export_wasm.rs  lib.rs  logging.rs  pbufs.rs  util.rs  wasm_types.rs
ffi/src/wasm/: mod.rs  webbluetooth_device.rs  webbluetooth_manager.rs  websocket_client_connector.rs
flatbuffer_schemas/: flatbuffer_client.fbs  flatbuffer_create_device.fbs  flatbuffer_device.fbs  flatbuffer_device_event.fbs  flatbuffer_enums.fbs  flatbuffer_server.fbs
java/: settings.gradle.kts
java/lib/: build.gradle.kts
java/lib/src/main/java/io/buttplug/: ButtplugClient.java  ButtplugConnectorException.java  ButtplugDevice.java  ButtplugDeviceException.java  ButtplugException.java  ButtplugFFI.java  ButtplugHandshakeException.java  ButtplugLogHandler.java  ButtplugMessageException.java  ButtplugPingException.java  ButtplugProtoUtil.java  ButtplugUnknownException.java  EmbeddedConnectorOptions.java  FFICallbackFactory.java  MessageAttributes.java  ObjectReferenceManager.java  WebsocketConnectorOptions.java
java/lib/src/main/java/io/buttplug/exceptions/: ButtplugConnectorException.java  ButtplugDeviceException.java  ButtplugException.java  ButtplugHandshakeException.java  ButtplugMessageException.java  ButtplugPingException.java  ButtplugUnknownException.java
java/lib/src/main/java/io/buttplug/ffi/: ButtplugClient.java  ButtplugDevice.java  ButtplugFFI.java  ButtplugFFIClient.java  ButtplugFFIDevice.java  ButtplugFFILogHandler.java  ButtplugFFIMessageSorter.java  ButtplugLogHandler.java  ButtplugProtoUtil.java  EmbeddedConnectorOptions.java  FFICallbackFactory.java  MessageAttributes.java  WebsocketConnectorOptions.java
js/: .gitignore  .npmignore  CHANGELOG.md  README.md  binding.gyp  index.html  package.json  tsconfig.base.json  tsconfig.browser.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  webpack.base.cjs  webpack.base.js  webpack.module.cjs
js/public/: index.html
js/scripts/: install_core.js  jsconfig.json  modularize.cjs  test_node.cjs
js/src/: buttplug_ffi.d.ts  buttplug_ffi.js  client.ts  connectors.ts  device.ts  errors.ts  ffi.ts  ffi_wrap.d.ts  index.ts  sorter.ts  web_index.ts
js/src/node/: binding.cpp  binding.h  ffi_wrap.ts  win32-dlfcn.cpp  win32-dlfcn.h
js/src/web/: ffi_wrap.ts
protobuf_schemas/: buttplug_rs_ffi.proto
src/: flatbuffer_client_generated.rs  flatbuffer_create_client.fbs  flatbuffer_create_client_generated.rs  flatbuffer_generated.rs  flatbuffer_server.fbs  flatbuffer_server_generated.rs  lib.rs
wasm/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  index.html  index.js  package.json  tsconfig.json  webpack.base.js  webpack.config.js
wasm-ts/: index.html  package.json  tsconfig.json
wasm-ts/src/: buttplug_ffi.d.ts  buttplug_ffi.js  client.ts  device.ts  errors.ts  ffi.ts  main.ts  sorter.ts
wasm-ts/src/protobuf/: buttplug_rs_ffi.ts
wasm/src/: bootstrap.ts  buttplug_client.rs  buttplug_client_device.rs  client.ts  device.ts  errors.rs  errors.ts  event_manager.rs  ffi.ts  index.ts  lib.rs  main.ts  utils.rs  webbluetooth_device.rs  webbluetooth_manager.rs  websocket_client_connector.rs
wasm/tests/: web.rs
