[package]
name = "buttplug-rs-ffi"
version = "2.0.3"
description = "FFI Layer for buttplug-rs. Used by other languages for implementing buttplug-rs bindings."
authors = ["Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["buttplug/tokio-runtime",  "buttplug/websockets", "buttplug/btleplug-manager", "buttplug/xinput-manager", "buttplug/serial-manager", "buttplug/lovense-dongle-manager", "log-panics"]
wasm = ["wasm-bindgen", "uuid", "web-sys", "js-sys", "tracing-wasm", "buttplug/wasm-bindgen-runtime", "async-trait", "wasm-bindgen-futures", "console_error_panic_hook"]

[dependencies]
buttplug = { version = "5.0.0", default-features = false, features = ["client", "server", "serialize-json"] }
# buttplug = { path = "../../buttplug-rs/buttplug", default-features = false, features = ["client", "server", "serialize-json"] }
tracing-subscriber = "0.2.20"
futures = "0.3.16"
tracing = "0.1.26"
dashmap = "4.0.2"
libc = "0.2.101"
prost = "0.8.0"
lazy_static = "1.4.0"
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"], optional = true }
# Needed to build valico with wasm-bindgen
uuid = { version = "0.8.2", features = ["wasm-bindgen"], optional = true }
async-lock = "2.4.0"
js-sys = { version = "0.3.53", optional = true }
tracing-wasm = { version = "0.2.0", optional = true }
async-trait = { version = "0.1.51", optional = true }
wasm-bindgen-futures = { version = "0.4.26", optional = true }
tokio = { version = "1.10.1", features = ["sync", "rt-multi-thread"] }
log-panics = { version = "2.0.0", optional = true, features = ["with-backtrace"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
futures-timer = "3.0.2"

[build-dependencies]
prost-build = "0.8.0"
vergen = "5.1.15"
anyhow = "1.0.43"

[lib]
name = "buttplug_rs_ffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.53"
# path = "../../wasm-bindgen/crates/web-sys"
#git = "https://github.com/rustwasm/wasm-bindgen"
optional = true
features = [
  "Navigator",
  "Bluetooth",
  "BluetoothDevice",
  "BluetoothLeScanFilterInit",
  "BluetoothRemoteGattCharacteristic",
  "BluetoothRemoteGattServer",
  "BluetoothRemoteGattService",
  "BinaryType",
  "Blob",
  "console",
  "ErrorEvent",
  "Event",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "RequestDeviceOptions",
  "WebSocket",
  "Window"
]
