[package]
name = "buttplug-rs-ffi"
version = "2.0.5"
description = "FFI Layer for buttplug-rs. Used by other languages for implementing buttplug-rs bindings."
authors = ["Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-backend"]
tokio-backend = ["buttplug/tokio-runtime", "tokio/rt-multi-thread", "buttplug/websockets", "buttplug/btleplug-manager", "log-panics", "tracing-android"]
android-backend = ["buttplug/tokio-runtime", "tokio/rt-multi-thread", "buttplug/btleplug-manager", "buttplug/websockets", "log-panics", "tracing-android", "buttplug/lovense-connect-service-manager", "jni", "jni-utils", "openssl"]
wasm-backend = ["wasm-bindgen", "uuid", "web-sys", "js-sys", "tracing-wasm", "buttplug/wasm-bindgen-runtime", "async-trait", "wasm-bindgen-futures", "console_error_panic_hook"]

[dependencies]
#buttplug = { version = "5.1.4", default-features = false, features = ["client", "server", "serialize-json"] }
buttplug = { path = "../../buttplug/buttplug", default-features = false, features = ["client", "server", "serialize-json"] }
btleplug = { path = "../../btleplug" }
tracing-subscriber = {version = "0.3.3", features = ["env-filter"]}
futures = "0.3.18"
tracing = "0.1.29"
dashmap = "4.0.2"
libc = "0.2.109"
prost = "0.9.0"
lazy_static = "1.4.0"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"], optional = true }
# Needed to build valico with wasm-bindgen
uuid = { version = "0.8.2", features = ["wasm-bindgen"], optional = true }
async-lock = "2.4.0"
js-sys = { version = "0.3.55", optional = true }
tracing-wasm = { version = "0.2.1", optional = true }
async-trait = { version = "0.1.51", optional = true }
wasm-bindgen-futures = { version = "0.4.28", optional = true }
tokio = { version = "1.17.0", features = ["sync", "rt-multi-thread"] }
log-panics = { version = "2.0.0", optional = true, features = ["with-backtrace"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
futures-timer = "3.0.2"
tracing-android = { version = "0.2.0", optional = true }
jni = { path = "../../jni-rs", optional = true }
jni-utils = { path = "../../jni-utils-rs", optional = true }
once_cell = "1.10.0"
openssl = { version = "0.10", optional = true, features = [ "vendored" ] }

[build-dependencies]
prost-build = "0.9.0"
vergen = "7.0.0"
anyhow = "1.0.51"

[lib]
name = "buttplug_rs_ffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.55"
# path = "../../wasm-bindgen/crates/web-sys"
#git = "https://github.com/rustwasm/wasm-bindgen"
optional = true
features = [
  "Navigator",
  "Bluetooth",
  "BluetoothDevice",
  "BluetoothLeScanFilterInit",
  "BluetoothRemoteGattCharacteristic",
  "BluetoothRemoteGattServer",
  "BluetoothRemoteGattService",
  "BinaryType",
  "Blob",
  "console",
  "ErrorEvent",
  "Event",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "RequestDeviceOptions",
  "WebSocket",
  "Window"
]
